@@ -1,8 +1,12 @@
 # ChangeLog for dev-util/strace
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/dev-util/strace/ChangeLog,v 1.2 2002/04/28 03:15:25 jnelson Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/strace/ChangeLog,v 1.3 2002/05/17 05:06:52 blocke Exp $
 
 *strace-4.4 (27 Apr 2002)
+
+  17 May 2002; Bruce A. Locke <blocke@shivan.org> strace-4.4.ebuild :
+
+  SourceForge mirror change and general ebuild cleanup
 
   27 Apr 2002; Jon Nelson <jnelson@gentoo.org> ChangeLog :
   
